1.谈谈过度设计：因噎废食的陷阱

--- a/article/other/前端文件下载的正确打开方式.md
+++ b/article/other/前端文件下载的正确打开方式.md
@@ -1,4 +1,114 @@
 # 前端文件下载的正确打开方式
+**a 标签**  
+通过a标签的download属性来实现文件下载，这种方式是最简单的，也是我们比较常用的方式，先来看示例代码：  
+``` 
+<a href="http://www.baidu.com" download="baidu.html">下载</a>
+```
+上面的这个示例点击下载，发现是跳转到了百度的首页，并没有真的下载文件。  
+因为a标签下载只能下载同源的文件，如果是跨域的文件，这里包括图片、音视频等媒体文件，都是预览，也无法下载。  
+上面的代码是直接通过书写a标签来实现文件下载，我们也可以通过js来实现，代码如下：  
+``` 
+const a = document.createElement('a')
+a.href = 'http://www.baidu.com'
+a.download = 'baidu.html'
+a.click()
+复制代码
+```
+效果和上面的一样，都是跳转到百度的首页，没有下载文件。  
+重点是a标签的download属性，这个属性是HTML5新增的。  
+它的作用是指定下载的文件名，如果不指定，那么下载的文件名就会根据请求内容的Content-Disposition来确定，如果没有Content-Disposition，那么就会使用请求的URL的最后一部分作为文件名。  
+
+**window.open**  
+使用a标签的案例也可以通过window.open来实现，效果是一样的，代码如下：  
+``` 
+window.open('http://www.baidu.com', '_blank')
+```
+这里的_blank是指定打开的方式，如果不指定，那么就会在当前页面打开，这里指定_blank，就是在新的页面打开。  
+同样a标签的download属性也是可以使用的，代码如下：  
+``` 
+window.open('http://www.baidu.com', '_blank', 'download=baidu.html')
+```
+这种方式也是有缺陷的，对比于a标签，这种方式不能下载.html、.htm、.xml、.xhtml等文件，因为这些文件会被当成html文件来处理，所以会直接在当前页面打开。  
+同样也不能下载跨域的文件，毕竟是window.open，不是window.download（window.download是假想）。  
+
+**location.href**  
+这种方式和window.open(url)是一样的，代码如下：  
+``` 
+location.href = 'http://www.baidu.com'
+```
+这种方式拥有window.open的所有缺陷   
+
+**location.?其他属性**  
+其他指代的都是能跳转页面的属性，比如location.assign、location.replace、location.reload等，这些属性都是可以实现文件下载的，代码如下：  
+``` 
+location.assign('http://www.baidu.com')
+location.replace('http://www.baidu.com')
+location.reload('http://www.baidu.com')
+```
+这里的location.reload是有点特殊的，它的作用是重新加载当前页面，但是它也可以接受一个参数，这个参数就是要跳转的页面，所以也可以实现文件下载。  
+当然同location.href一样，这些方式的缺点都一样  
+
+**XMLHttpRequest**  
+这种方式就是我们常说的ajax下载，包括axios、fetch等都是相同的，代码如下：  
+```  
+const xhr = new XMLHttpRequest()
+xhr.open('GET', 'http://www.baidu.com')
+xhr.send()
+
+xhr.onload = function () {
+  const blob = new Blob([xhr.response], { type: 'text/html' })
+  const a = document.createElement('a')
+  a.href = URL.createObjectURL(blob)
+  a.download = 'baidu.html'
+  a.click()
+}
+```
+主要的逻辑是当我们的请求成功后，我们会拿到响应体的response，这个response就是我们要下载的内容，然后我们把它转换成blob对象，然后通过URL.createObjectURL来创建一个url，然后通过a标签的download属性来实现文件下载。  
+
+_blob_  
+> Blob对象表示一个不可变、原始数据的类文件对象。它的数据可以按文本或二进制的格式进行读取，也可以转换成 ReadableStream 来用于数据操作。
+> Blob表示的不一定是JavaScript原生格式的数据。File 接口基于 Blob，继承了blob的功能并将其扩展以支持用户系统上的文件。
+
+blob对象是html5新增的对象，它的作用是用来存储二进制数据的，比如图片、视频、音频等，它的使用方法如下：  
+``` 
+/**
+ * @param {Array} array 二进制数据
+ * @param {Object} options 配置项
+ *      @param {String} options.type 文件类型，它代表了将会被放入到 blob 中的数组内容的 MIME 类型。
+ *      @param {String} options.endings 用于指定包含行结束符\n的字符串如何被写入。默认为transparent，表示不会修改行结束符。还可以指定为native，表示会将\n转换为\r\n。
+ */
+const blob = new Blob([], { type: '' })
+```
+主要关注的是type属性，默认情况下，blob对象是没有type属性的，那么这个Blob就是一个无类型的Blob，文件不会损毁，但是无法被正常识别。  
+
+_URL.createObjectURL_  
+> URL.createObjectURL() 静态方法会创建一个 DOMString，其中包含一个表示参数中给出的对象的 URL。这个 URL 的生命周期和创建它的窗口中的 document 绑定。这个新的 URL 对象表示指定的 File 对象或 Blob 对象。
+
+这个方法是用来创建一个url的，它的作用是把一个blob对象转换成一个url，这个url可以用来下载文件，也可以用来预览文件，代码如下：  
+``` 
+const url = URL.createObjectURL(blob)
+```
+这个url的生命周期和创建它的窗口中的document绑定，也就是说，当我们的document被销毁后，这个url就会失效，所以我们需要在合适的时机销毁它，代码如下：  
+``` 
+URL.revokeObjectURL(url)
+```
+
+过blob对象来解决，但是我们的type属性是写死的，如果在文件类型是确定的情况下是没问题的，但是如果这个接口就是下载文件的接口，文件可能是各种类型的，我们应该怎么处理？  
+第一个可以和接口提供者进行协商，协商方案是不确定的，第二就是通过response的header来获取文件的type：  
+``` 
+const type = response.headers['content-type']
+
+const blob = new Blob([response.data], { type })
+```
+通过response的header来获取type，然后再创建blob对象，这样就可以正确的下载文件了。  
+其实content-type也可能是application/octet-stream，这个时候我们就需要通过file-type来获取文件的type了。  
+下面的代码是通过file-type来获取文件的type：  
+``` 
+import {fileTypeFromStream} from 'file-type';
+
+const type = await fileTypeFromStream(response.body);
+const blob = new Blob([response.data], { type })
+```
 
 原文:  
 [前端文件下载的正确打开方式](https://mp.weixin.qq.com/s/ytj932qmZL1ZnUdlOWqVaw)
