1.浅谈前端框架原理

--- a/article/other/京东低代码平台 水滴表格2.0.md
+++ b/article/other/京东低代码平台 水滴表格2.0.md
@@ -1,4 +1,34 @@
 # 京东低代码平台：水滴表格2.0 
+## 生成器交互升级
+以用户为中心和美观有序的原则，将页面布局调整为左中右布局，重点突出了表格的工作区，提升了信息处理的效率。此外，左右两栏通过抽屉形式支持展开和隐藏，这样既确保了用户操作的便捷性又保证了页面功能的一致性。然后，生成器的最上面一栏还另外新增了一条工具栏，用户可以利用这些工具快速配置常用的表格配置项，达到简单易用的效果。  
+本次升级具体所涉及的改动主要如下：  
+1. 在搭建过程的交互上，采用了拖拽式交互，大大简化了用户操作，更加符合用户操作习惯。另外，表格工作区直观地展示出表格，并且允许用户直接基于表格进行编辑操作实现所见即所得。
+2. 新版生成器抛弃了原来用的状态管理器，转而利用 React Context 实现属性的传递和状态管理。优化了生成器的性能，提高了代码质量和可维护性
+3. 优化了组合组件搭建流程和交互方式。以前用户必须选中组合组件的某个子布局然后再去选择填充的子组件。现在只需轻轻拖拽，然后放到对应的位置即可，大大方便了用户使用组合组件搭建单元格内容的操作方式
+
+## 表格基础能力
+**新增编辑功能**  
+表格编辑作为在实际应用中比较高频的一种使用场景，尤其是在中后台业务场景中经常会用到，也是 Drip Table 用户呼声比较高的功能之一。但是由于实现难度比较大，并且受限于 Drip Table 1.0 框架不够完善，无法支撑编辑能力，所以在完成了架构升级后，就开始着手基于 rc-table 的可编辑表格的开发，现在它终于来了。  
+提供了丰富的组件来支持单元格的编辑，包括输入框、选择框、日期选择器等等，后面我们还会继续扩展。最重要的是，编辑态是绑定在单元格组件中，这也就是说，开发者可以在扩展组件中通过设置编辑状态来扩展我们的编辑能力，甚至可以通过自定义的业务组件来支持修改数据。  
+
+**子表格功能**  
+表格中可以嵌套子表格，无限嵌套下去。包含子表格是否默认展开、子表格头尾插槽等功能。  
+
+**拖拽行功能**  
+新增了行拖拽的功能，允许用户通过可视化拖拽方式修改行数据。  
+
+**固定行列功能**  
+设置首行固定，也可以设置某列左或者右固定。  
+
+## 新增卡片布局
+相对于传统表格，卡片式列表具有更直观的视觉展示效果，将信息分块从而突出重点，概览性更强便于进行数据对比。  
+Drip Table 的卡片布局和传统表格布局复用同一套 JSON Schema， 用户无需另外重新配置，还支持一键切换布局，适用于多种业务展示场景，提高了表格的视觉展示效果。另外，Drip Table 还可以针对卡片布局进行定制化配置，在完全不影响表格展示的情况下，对卡片的视觉效果进行进一步加工和美化。比如，卡片布局支持设置每行最多展示的卡片数以适应不同的屏幕分辨率。  
+
+## 搭建能力增强
+常遇到在表格中展示下拉选择框、日期展示以及操作栏中点击弹出对话框的情况。所以本次，Drip Table 2.0 新增了下拉框、日期、网页弹框等基础组件，带来新的功能，丰富了组件库  
+组件支持自定义列头的自定义配置，可以直接在属性栏中编入HTML片段，丰富了表头展示形式  
+
+本次升级全局配置，添加了支持冻结表头、斑马纹等配置，进一步提升 Drip Table 的综合配置能力，为大家带来更好用更有用的LowCode表格生成器
 
 原文:  
 [京东低代码平台：水滴表格2.0 正式版来啦！](https://juejin.cn/post/7173583038452858911?share_token=3067f965-516a-42be-85dd-37795a45797c)
