1. 基于FFmpeg和Wasm的Web端视频截帧方案

--- a/article/other/2024 年的前端开发模式.md
+++ b/article/other/2024 年的前端开发模式.md
@@ -78,7 +78,7 @@ React Router团队基于React Router开发出Remix这一React框架。
 
 其中状态到视图的映射框架已经帮我们做了。所以，只要能表示状态的变化，其实就能表示业务逻辑。  
 
-## 抽象2到抽象3
+**抽象2到抽象3**  
 SCXML格式没法直接在JS代码中使用。为了用代码实现逻辑，我们需要使用遵循SCXML规范的库。xstate是JS中比较流行的状态机开源库。  
 接下来我们让chatGPT将上述SCXML格式转换为xstate语法  
 得到结果  
@@ -171,6 +171,46 @@ const loginMachine = Machine({
 
 export default loginMachine;
 ```
+
+段代码我们可以直接粘贴到xstate的可视化编辑器中查看  
+初始状态可以转移到3个状态（这些状态都是chatGPT生成的），其中：  
+- QUICK_LOGIN —— 快捷登录
+- ACCOUNT_LOGIN —— 账号密码登录
+- THIRD_PARTY_LOGIN —— 第三方登录
+
+每个状态接下来的变化逻辑都清晰可见。比如，当进入ACCOUNT_LOGIN状态后，后续会根据是否登录（UNREGISTERED、REGISTERED）进入不同逻辑：  
+也就是说，chatGPT理解了需求文档想表达的业务逻辑后，将业务逻辑转换成代码表示。  
+
+**抽象3到抽象4**  
+只需要让chatGPT根据上述xstate状态机生成组件代码即可。  
+chatGPT对话有token限制，没法生成太多代码怎么办？  
+实际上，这可能并不是坏事。前端团队有条不成文的规矩 —— 如果一个组件超过200行，那你就应该拆分他。  
+如果chatGPT生成的组件超过了token限制，那么应该让他拆分新的组件。  
+拆分组件的前提是 —— chatGPT需要懂业务逻辑。显然，他已经懂了xstate数据结构所代表的业务逻辑。  
+可以让chatGPT将SCXML格式转换而来的xstate数据结构保存在一个变量中，在后续对话中，用一个变量名就能指代他背后所表示的业务逻辑（这里保存在变量m中）。  
+当我们要生成业务组件代码时，让chatGPT从模块中导出m实现组件逻辑  
+对于实际场景下比较复杂的需求，经过从抽象1到抽象3的转换，我们会得到代表业务逻辑的不同变量，比如：  
+- signin变量代表登录逻辑
+- login变量代表注册逻辑
+- PopupAD变量代表弹窗广告逻辑
+
+如果弹窗广告的逻辑和是否登录相关，那么要实现弹窗广告组件代码只需要告诉chatGPT：  
+根据signin、PopupAD实现弹窗广告的react组件，其中signin变量由xxx模块导出，PopupAD变量由yyy导出。  
+如果你司使用其他框架，只需将其中react换成其他框架名即可。当大家还在争论哪个框架更优秀时，LLM已经悄悄帮开发者实现了框架自由
+
+## 新开发模式的优势
+从提高效率与提高门槛的角度分析这种新开发模式的优势。
+**提高效率**  
+这种新模式能显著提高开发效率。本质来说，他将前端工程师从实现需求的角色转变为review代码的角色。  
+当需求评审会结束的那一刻，第一版前端代码就生成了。其次，他能解放部分测试同学的生产力。对于维护过屎山代码的同学，肯定遇到过这样的场景：明明只是改动一个小需求，测试问你改动影响的范围，你自己都不清楚会有多大影响，为了稳妥起见只能让测试覆盖更大的回归测试范围。  
+在使用基于状态机的开发模式后，任何改动会造成的影响在状态图中都清晰可见。同时，由于代码逻辑的实现基于状态机，可以据此自动生成端到端的测试用例，模型也能根据状态机描述的逻辑自己补足其他单测。  
+**提高门槛**  
+能够对模型生成的代码进行查漏补缺本身就要求开发者有一定前端开发水平。  
+这种开发模式引入了新的抽象层 —— 状态机，这无疑会增加上手门槛。  
+但这都不是最重要的，最重要的是 —— 这套模式强迫前端开发需要更懂业务。  
+以前，拿到产品的需求文档后，你可以在做的过程中遇到不懂的再问产品。使用新的开发模式后，你必须很懂业务，做到在需求评审时就能指出需求文档中不合理的地方。  
+因为当需求评审结束后，你会将这份需求文档投喂给模型直接生成业务代码（中间会经历生成SCXML、生成xstate数据结构、保存xstate变量、使用变量生成组件代码）。  
+当大家技术水平旗鼓相当时，懂业务才是前端的核心竞争力。
 
 
 原文:  
