1. CSS动画合成属性animation-composition

--- a/article/js/设计一个支持并发的前端接口缓存.md
+++ b/article/js/设计一个支持并发的前端接口缓存.md
@@ -1,4 +1,234 @@
 # 设计一个支持并发的前端接口缓存
+缓存池不过就是一个map，存储接口数据的地方，将接口的路径和参数拼到一块作为key，数据作为value存起来罢了  
+``` 
+const cacheMap = new Map();
+```
+封装一下调用接口的方法，调用时先走缓存数据  
+``` 
+import axios, { AxiosRequestConfig } from 'axios'
+
+// 先来一个简简单单的发送
+export function sendRequest(request: AxiosRequestConfig) {
+  return axios(request)
+}
+```
+然后加上的缓存  
+``` 
+import axios, { AxiosRequestConfig } from 'axios'
+import qs from 'qs'
+
+const cacheMap = new Map()
+
+interface MyRequestConfig extends AxiosRequestConfig {
+  needCache?: boolean
+}
+
+// 这里用params是因为params是 GET 方式穿的参数，我们的缓存一般都是 GET 接口用的
+function generateCacheKey(config: MyRequestConfig) {
+  return config.url + '?' + qs.stringify(config.params)
+}
+
+export function sendRequest(request: MyRequestConfig) {
+  const cacheKey = generateCacheKey(request)
+  // 判断是否需要缓存，并且缓存池中有值时，返回缓存池中的值
+  if (request.needCache && cacheMap.has(cacheKey)) {
+    return Promise.resolve(cacheMap.get(cacheKey))
+  }
+  return axios(request).then((res) => {
+    // 这里简单判断一下，200就算成功了，不管里面的data的code啥的了
+    if (res.status === 200) {
+      cacheMap.set(cacheKey, res.data)
+    }
+    return res
+  })
+}
+```
+然后调用  
+``` 
+const getArticleList = (params: any) =>
+  sendRequest({
+    needCache: true,
+    url: '/article/list',
+    method: 'get',
+    params
+  })
+
+getArticleList({
+  page: 1,
+  pageSize: 10
+}).then((res) => {
+  console.log(res)
+})
+```
+调接口时给一个needCache的标记，然后调完接口如果成功的话，就会将数据放到cacheMap中去，下次再调用的话，就直接返回缓存中的数据。  
+**并发缓存**  
+虽然看似实现了缓存，不管我们调用几次，都只会发送一次请求，剩下的都会走缓存。  
+``` 
+etArticleList({
+  page: 1,
+  pageSize: 10
+}).then((res) => {
+  console.log(res)
+})
+getArticleList({
+  page: 1,
+  pageSize: 10
+}).then((res) => {
+  console.log(res)
+})
+```
+虽然设计了缓存，但是请求还是发送了两次，这是因为我们第二次请求发出时，第一次请求还没完成，也就没给缓存池里放数据，所以第二次请求没命中缓存，也就又发了一次。  
+
+**问题**  
+有没有一种办法让第二次请求等待第一次请求调用完成，然后再一块返回呢？  
+
+**思考**  
+可以给第二次请求加个定时器，定时器时间到了再去cacheMap中查一遍有没有缓存数据，没有的话可能是第一个请求还没好，再等几秒试试！  
+这样的话，第一个请求的时候也会在原地等呀！  
+``` 
+// 存储缓存当前状态，相当于挂牌子的地方
+const statusMap = new Map<string, 'pending' | 'complete'>();
+
+export function sendRequest(request: MyRequestConfig) {
+  const cacheKey = generateCacheKey(request)
+
+  // 判断是否需要缓存
+  if (request.needCache) {
+    if (statusMap.has(cacheKey)) {
+      const currentStatus = statusMap.get(cacheKey)
+
+      // 判断当前的接口缓存状态，如果是 complete ，则代表缓存完成
+      if (currentStatus === 'complete') {
+        return Promise.resolve(cacheMap.get(cacheKey))
+      }
+
+      // 如果是 pending ，则代表正在请求中，这里就等个三秒，然后再来一次看看情况
+      if (currentStatus === 'pending') {
+        return new Promise((resolve, reject) => {
+          setTimeout(() => {
+            sendRequest(request).then(resolve, reject)
+          }, 3000)
+        })
+      }
+    }
+
+    statusMap.set(cacheKey, 'pending')
+  }
+
+  return axios(request).then((res) => {
+    // 这里简单判断一下，200就算成功了，不管里面的data的code啥的了
+    if (res.status === 200) {
+      statusMap.set(cacheKey, 'complete')
+      cacheMap.set(cacheKey, res)
+    }
+    return res
+  })
+}
+```
+试试效果  
+``` 
+getArticleList({
+    page: 1,
+    pageSize: 10
+}).then((res) => {
+    console.log(res)
+})
+getArticleList({
+    page: 1,
+    pageSize: 10
+}).then((res) => {
+    console.log(res)
+})
+```
+
+**优化**  
+用setTimeout等待还是不太优雅，如果第一个请求能在3s以内完成还行，用户等待的时间还不算太久，还能忍受。可如果是3.1s的话，第二个接口用户可就白白等了6s之久，那么，有没有一种办法，能让第一个接口完成后，接着就通知第二个接口返回数据呢？  
+这种场景写代码用的最多的就是回调了，但是这次用的是promise啊，而且还是毫不相干的两个promise。等等！callback和promise，promise本身就是callback实现的！promise的then会在resole被调用时调用，这样的话，可以将第二个请求的resole放在一个callback里，然后在第一个请求完成的时候，调用这个callback  
+``` 
+// 定义一下回调的格式
+interface RequestCallback {
+  onSuccess: (data: any) => void
+  onError: (error: any) => void
+}
+
+// 存放等待状态的请求回调
+const callbackMap = new Map<string, RequestCallback[]>()
+
+export function sendRequest(request: MyRequestConfig) {
+  const cacheKey = generateCacheKey(request)
+
+  // 判断是否需要缓存
+  if (request.needCache) {
+    if (statusMap.has(cacheKey)) {
+      const currentStatus = statusMap.get(cacheKey)
+
+      // 判断当前的接口缓存状态，如果是 complete ，则代表缓存完成
+      if (currentStatus === 'complete') {
+        return Promise.resolve(cacheMap.get(cacheKey))
+      }
+
+      // 如果是 pending ，则代表正在请求中，这里放入回调函数
+      if (currentStatus === 'pending') {
+        return new Promise((resolve, reject) => {
+          if (callbackMap.has(cacheKey)) {
+            callbackMap.get(cacheKey)!.push({
+              onSuccess: resolve,
+              onError: reject
+            })
+          } else {
+            callbackMap.set(cacheKey, [
+              {
+                onSuccess: resolve,
+                onError: reject
+              }
+            ])
+          }
+        })
+      }
+    }
+
+    statusMap.set(cacheKey, 'pending')
+  }
+
+  return axios(request).then(
+    (res) => {
+      // 这里简单判断一下，200就算成功了，不管里面的data的code啥的了
+      if (res.status === 200) {
+        statusMap.set(cacheKey, 'complete')
+        cacheMap.set(cacheKey, res)
+      } else {
+        // 不成功的情况下删掉 statusMap 中的状态，能让下次请求重新请求
+        statusMap.delete(cacheKey)
+      }
+      // 这里触发resolve的回调函数
+      if (callbackMap.has(cacheKey)) {
+        callbackMap.get(cacheKey)!.forEach((callback) => {
+          callback.onSuccess(res)
+        })
+        // 调用完成之后清掉，用不到了
+        callbackMap.delete(cacheKey)
+      }
+      return res
+    },
+    (error) => {
+      // 不成功的情况下删掉 statusMap 中的状态，能让下次请求重新请求
+      statusMap.delete(cacheKey)
+      // 这里触发reject的回调函数
+      if (callbackMap.has(cacheKey)) {
+        callbackMap.get(cacheKey)!.forEach((callback) => {
+          callback.onError(error)
+        })
+        // 调用完成之后也清掉
+        callbackMap.delete(cacheKey)
+      }
+      // 这里要返回 Promise.reject(error)，才能被catch捕捉到
+      return Promise.reject(error)
+    }
+  )
+}
+
+
+```
 
 
 原文:  
