--- a/article/js/设计一个支持并发的前端接口缓存.md
+++ b/article/js/设计一个支持并发的前端接口缓存.md
@@ -226,10 +226,48 @@ export function sendRequest(request: MyRequestConfig) {
     }
   )
 }
-
+```
+在判断到当前请求状态是pending时，将promise的resole与reject放入回调队列中，等待被触发调用。然后在请求完成时，触发对应的请求队列。  
+``` 
+getArticleList({
+    page: 1,
+    pageSize: 10
+}).then((res) => {
+    console.log(res)
+})
+getArticleList({
+    page: 1,
+    pageSize: 10
+}).then((res) => {
+    console.log(res)
+})
 
 ```
-
+再试一下失败的时候  
+``` 
+getArticleList({
+    page: 1,
+    pageSize: 10
+}).then(
+    (res) => {
+      console.log(res)
+    },
+    (error) => {
+      console.error(error)
+    }
+)
+getArticleList({
+    page: 1,
+    pageSize: 10
+}).then(
+    (res) => {
+      console.log(res)
+    },
+    (error) => {
+      console.error(error)
+    }
+)
+```
 
 原文:  
 [设计一个支持并发的前端接口缓存](https://mp.weixin.qq.com/s/QHrApicS-oZbNGMsjuvToA)
