--- a/article/other/可视化搭建 - 组件值与联动.md
+++ b/article/other/可视化搭建 - 组件值与联动.md
@@ -61,7 +61,80 @@ const table = {
   },
 };
 ```
+这样设计可以同时满足以上四个要求，解释如下：
+1. 可以在任意组件实例定义多个联动关系，自然可以实现多对多联动
+2. valueRelates 引入 selector 可以响应 state 或 props 的变化，可以由任意状态驱动联动关系更新
+3. 如果 source 与 target 都不指向自己，则自己不参与到联动关系链中
+4. 声明式定义方式，自然在组件实例被销毁时失效
 
+那么组件如何响应联动呢？重点就在这里，组件可以通过 selector(({ relates }) =>) 的 relates 拿到自己当前的联动状态，比如：  
+``` 
+const table = {
+  componentName: "table",
+  runtimeProps: ({ selector }) => {
+    // relates 结构如下，对于每一个作用于自己的组件实例 ID 与最新 value 值都可以拿到
+    // [{
+    //   sourceComponentId: 'abc',
+    //   value: '123'
+    // }]
+    const relates = selector(({ relates }) => relates);
+    return {
+      status: relates.length > 0 ? "linked" : "free",
+    };
+  },
+};
+```
+如果我们在 runtimeProps 里使用 selector 监听 relates，就可以在联动状态变化时，驱动组件渲染，并传入联动相关状态；如果在 fetcher 里使用 selector 监听 relates，就可以在联动状态变化时，驱动组件触发查询，等等。  
+以后拓展越来越多的组件元信息回调函数，支持了 selector 之后，都可以声明式的响应 relates 变化，也就是组件可以声明式灵活响应联动，真正意义上让联动可以用在任何场景。  
+框架没有对联动做太多的联动内置行为，实现的都是灵活规则，虽然业务需要补全不少声明，但胜在灵活与用法统一。  
 
+## 描述联动行为
+不同的联动可能做不同的事，比如一个输入框组件，可能同时有以下两种作用：
+1. 让另一个组件查询条件增加 "where name=" 当前输入框的值
+2. 当组件的值为 "delete" 时，让画布另一个组件隐藏
+
+为了区分联动的功能，可以在 valueRelates 增加 payload 参数，描述该联动的目的：  
+``` 
+const table = {
+  componentName: "table",
+  valueRelates: ({ componentId, selector }) => {
+    return [
+      {
+        sourceComponentId: componentId,
+        targetComponentId: selector(({ props }) => props.targetComponentId),
+        // 作用为目标组件的查询筛选条件
+        payload: "filter",
+      },
+      {
+        sourceComponentId: componentId,
+        targetComponentId: selector(({ props }) => props.targetComponentId),
+        // 作用为目标组件是否隐藏
+        payload: "hide",
+      },
+    ];
+  },
+};
+```
+然后目标组件就可以根据实际情况，在 fetcher 过滤 relates 中 payload="filter" 的值，在 runtimeProps 过滤 relates 中 payload="hide" 的值。  
+
+## 用持续联动实现一次性联动
+每一次组件更新 value 值后，都会刷新对目标组件 relates 的位置，具体来说，会将其置顶，所以目标组件可以根据 relates 先来后到顺序判断，比如在联动效果冲突时，让排在前面的优先生效。  
+比如：  
+``` 
+const table = {
+  componentName: "table",
+  runtimeProps: ({ selector }) => {
+    // 找到最初生效的，payload 为 color 的联动，覆盖 props.color
+    const relateColor = selector(({ relates }) =>
+      relates.find((each) => each.payload === "color")
+    );
+    return {
+      color: relateColor,
+    };
+  },
+};
+```
+当另一个组件触发 value 变化时，它会排在目标组件 relates 最前面，这样的话，如果目标组件按照如上方式编写响应代码，就总会响应最后一次生效的联动。  
+ 
 原文:  
 [可视化搭建 - 组件值与联动](https://mp.weixin.qq.com/s/CUMyfAqRQWx5l8cLgCMRfA)
