--- a/article/css/超长溢出头部省略打点.md
+++ b/article/css/超长溢出头部省略打点.md
@@ -69,7 +69,135 @@ div {
 对于纯数字的文本内容，数字的排列顺序也会跟着相应的书写顺序，进行反向排列  
 
 ## 多方案解决
+**方案一：两次 direction 反转**  
+既然最终展示的文案被反转了，可以尝试通过多一层的嵌套，进行二次反转可以解决问题。  
+``` 
+<div class="g-twice-reverse">
+    <span>13993199751_18037893546_4477657</span>
+</div>
 
+.g-twice-reverse {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    direction: rtl;
+    white-space: nowrap;
+    
+    span {
+       direction: ltr; 
+    };
+}
+```
+可以看到，内容还是被反转了，我们希望的结果是 ...037893546_4477657。不过不用着急，可以尝试再配合 unicode-bidi 属性试一下。最终发现，配合 unicode-bidi: bidi-override 可以实现我们想要的最终效果：  
+``` 
+.g-twice-reverse {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    direction: rtl;
+    white-space: nowrap;
+    
+    span {
+       direction: ltr; 
+       unicode-bidi: bidi-override;
+    };
+}
+```
+这里，我们利用了两层结构：  
+1. 外层的 g-twice-reverse 正常设置从右向左的溢出省略打点
+2. 内容添加一层 span，利用 direction: ltr 和 unicode-bidi: bidi-override 的配合，在内部再反向反转排版规则
+
+bidi-override 的作用是对文本进行覆盖，使得其中的内联元素（inline element）按照我们想要的书写方向展示。而 unicode-bidi: bidi-override 取值的作用是用于覆盖默认的 Unicode 双向算法以控制文本的显示方向。  
+bidi-override 和 direction 在 <span> 中的组合，实现了更细粒度的文本方向处理。  
+
+**方案二：通过伪元素破坏其纯数字的性质**  
+既然上面被反转排版的内容是纯数字或者由下划线连接成的数字，那么能不能尝试破坏其纯数字的特性？  
+譬如，给数组的头部添加一个看不见字母，尝试一下，这里构造两组数据对比一下：  
+``` 
+<div class="g-add-letter">
+    <span>a</span>
+    <span>546_4477657</span>
+</div>
+<div class="g-add-letter">
+    <span>a</span>
+    <span>13993199751_18037893546_4477657</span>
+</div>
+
+.g-twice-reverse {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    direction: rtl;
+    white-space: nowrap;
+}
+```
+只是添加一个 <span>a</span> 肯定是不合适的，后面维护的同学肯定一脸懵逼。并且这个 a 字母需要隐藏起来。思来想去，这不是和以前清除浮动的场景非常类似吗？这里使用伪元素再贴切不过，再改造下代码：  
+``` 
+<div class="g-add-letter">
+    <span>546_4477657</span>
+</div>
+<div class="g-add-letter">
+    <span>13993199751_18037893546_4477657</span>
+</div>
+
+.g-add-letter {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    direction: rtl;
+    white-space: nowrap;
+    
+    span::before {
+      content: "a";
+      opacity: 0;
+      font-size: 0;
+    }
+}
+```
+使用在元素前面添加了一个字母 a，并且设置伪元素的 font-size: 0 和 opacity: 0，从外观上，完全看不出有这么个元素，非常好的隐藏了起来，同时，起到了破坏内容其纯数字的性质。  
+
+**方案三：通过 \200e LRM 标记位**  
+问题还是在于插入的这个字母 a，一来是不够优雅，二是这种解决方案更像是一种 HACK 的解决方式，随着时间长河的推进，这种代码即便留下了注释，也容易造成可读性上困扰。  
+通过查阅资料，最终找到了这样一个字符 -- \200e。  
+\200e：是左到右标记（Left-to-Right Mark，LRM）的 Unicode 码点。它是 Unicode 字符方向控制工具之一，用于强制将文本的阅读方向指定为从左到右。在前端排版中，特别是处理多语言文本时，由于不同语言书写时有不同的书写方向，因此可以使用 LRM 来指定文本的书写方向，以确保文本能够正确地显示。  
+通过 \200e 替换掉 a，这里用 \200e 的目的与 a 的目的其实是不一样的：  
+1. 在字符串前面通过伪元素添加一个 a，目的是破坏其纯数字的特性
+2. 在字符串前面通过伪元素添加一个 \200e，目的是强制控制接下来文本的排版顺序
+
+添加 a 的方案类似于一种 Hack 技巧，而 \200e 可以理解为就是专门解决这种场景而诞生的特殊字符。  
+``` 
+<div class="g-add-letter">
+    <span>13993199751_18037893546_4477657</span>
+</div>
+
+.g-add-letter {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    direction: rtl;
+    white-space: nowrap;
+    
+    span::before {
+    content: "\200e";
+    opacity: 0;
+    font-size: 0;
+  }
+}
+```
+
+**方案四：通过 <bdi> 标签**  
+<bdi>：是一个 HTML 标签，表示“双向的隔离器”（Bidirectional Isolation）。它是一个比较新的标签，主要用于解决混合显示多个语言文本时的排版问题。  
+在多语言文本中，由于不同语言之间的书写方向和文本组织方式可能有所不同，如果直接拼合在一起显示，容易导致排版混乱，甚至出现不合法的语言混排现象。而 <bdi> 标签则提供了一种简单的解决方案，可以隔离不同的语言文本，确保它们按照正确的顺序呈现，并避免混乱的语言混排现象。  
+具体来说，<bdi> 标签可以将一段文本从周围文本隔离开来，创建一个独立的文本环境，使得文本能够按照正确的书写方向呈现。在使用该标签时，可以使用 dir 属性来指定文本的书写方向，可以是从左到右（dir="ltr"）或者从右到左（dir="rtl"）等。  
+综上所述，<bdi> 标签的作用是提供一种简单的解决方案来排版混合显示多个语言文本，通过隔离不同的语言文本，确保它们按照正确的顺序呈现，并避免混乱的语言混排现象。  
+因此，利用 <bdi> 标签，我们可以再进一步省略掉伪元素的部分：  
+``` 
+<div class="g-bdi">
+    <bdi dir="ltr">13993199751_18037893546_4477657</bdi>
+</div>
+
+.g-bdi {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    direction: rtl;
+    white-space: nowrap;
+}
+```
 
 
 原文:  
