1.理解 React 18 的“并发特性”

--- a/article/other/从领域到架构的演变.md
+++ b/article/other/从领域到架构的演变.md
@@ -1,4 +1,14 @@
 # 从领域到架构的演变
+## 从领域到架构的演变
+## 案例领域  
+摸索营销业务下的软件设计，如何结合业务进行代码软件设计。
+**普通开发模式**  
+一般接到业务的做法是，我们的现状有什么？需要设计什么样的数据模型？需要做什么样的逻辑？对以前的代码结构等等存在是否有影响？  
+对于基础架构设计完毕之后，这样的做法确实没有什么问题，而且有时候需求需要快速上线或者刚接触项目不久，不是很懂，这样做也最符合常规，毕竟不会出问题才是最完美的。  
+**“不将就”模式**  
+但是作为一个自己以后可能需要长期维护、迭代下去的项目，如果不懂前人的设计，不停地堆代码下去，迟早一天会成为一个 "巨石" 应用，最后苦的还是自己（跑路就当我没说…）。所以该怎么设计呢？  
+
+
 
 
 原文:  
